; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c_psignal_vfork_with_reason.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c_psignal_vfork_with_reason.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_reason = type { i32 }

@PSIG_VFORK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @psignal_vfork_with_reason(i32 %0, i32 %1, i32 %2, i32 %3, %struct.os_reason* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.os_reason*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.os_reason* %4, %struct.os_reason** %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @PSIG_VFORK, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load %struct.os_reason*, %struct.os_reason** %10, align 8
  %17 = call i32 @psignal_internal(i32 %11, i32 %12, i32 %13, i32 %14, i32 %15, %struct.os_reason* %16)
  ret void
}

declare dso_local i32 @psignal_internal(i32, i32, i32, i32, i32, %struct.os_reason*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
